# python-mnemonic

./: .editorconfig  .flake8  .gitignore  .mypy.ini  .travis.yml  AAK0001.xml  AUTHORS  BIP_0039.txt  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  coca.py  force39.py  generate_seeds.py  generate_vectors.py  mnemonic.py  mnemonic_s.py  mnemonic_test.py  pyproject.toml  requirements.txt  run_formosa.sh  setup.cfg  setup.py  template.json  test.py  test_mnemonic.py  test_s.py  test_shamir.py  test_theme_verify.py  tox.ini  vectors.json  venv_setup.bat  venv_setup.sh  zmeny.txt
.github/workflows/: python-package.yml  style-check.yml
mnemonic/: GUI.py  GUI.spec  __init__.py  executable_setup.py  generator.py  mn_address.py  mnemonic.py  p2pkh_addr.py  pyblowfish.py  rijndael.py  secretsharing.py  segwit_addr.py  segwit_test.py  shamir.py  swapper.py  test_shamir.py
mnemonic/edit_themes/: Data.txt  main.json
mnemonic/edit_themes/theme_test/: Data_test.txt  test_verifier.json
mnemonic/themes/: finances.json  sci-fi.json  the_big_bang_theory.json  theme_verify.py
mnemonic/wordlist/: english.txt  french.txt
src/mnemonic/: GUI_qt.py  mnemonic.py
src/mnemonic/themes/: BIP39.json  BIP39_french.json  (+8 more)
tests/: test_mnemonic.py  test_theme_verify.py
tests/theme_test/: Data_test.json  test_verifier.json
tools/: generate_vectors.py  theme_handler.py
tools/edit_themes/: Data.json  Data.txt  main.json
wordlist/: english.txt
words/: BIP39en.txt  COCA.txt  bip0039.txt  bip0039_adj.txt  bip0039_adv.txt  bip0039_noun.txt  bip0039_verb.txt
(+1 files in other folders)
